<resources>
    <string name="app_name">mHealth_v2</string>

    <!-- Snackbars -->
    <string name="snackbar_request_permission">Request</string>
    <string name="snackbar_dismiss">Dismiss</string>

    <!-- Permissions -->
    <string name="permission_explain">Hardware permissions required for this app to work</string>
    <string name="permission_explain_gps">Location data permission required for GPS access</string>
    <string name="permission_explain_write_storage">Storage write permission required to save data</string>
    <string name="permission_explain_wake_lock">Wake lock permission required to record sensor data</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_new">Add Participant</string>
    <string name="nav_start">Start</string>
    <string name="nav_save">Admin</string>
    <string name="nav_raw">Metrics</string>
    <string name="nav_accelerometer">Accelerometer</string>
    <string name="nav_gravity">Gravity</string>
    <string name="nav_gyroscope">Gyroscope</string>
    <string name="nav_rotation_vector">Rotation Vector</string>

    <!-- New participant fragment-->
    <string name="input_text_id">ID:</string>
    <string name="input_text_name">Name:</string>
    <string name="input_text_pain">Any pain (Back, Leg, Head, etc.)</string>
    <string name="input_text_med">Any medication (in last 3 days)</string>
    <string name="input_text_walk">Any problems walking</string>
    <string name="input_text_tbi">Ever had a concussion</string>
    <string name="input_text_sixmo">If yes, within the last six months?</string>
    <string name="input_text_multiple">If yes, more than once?</string>
    <string name="input_text_gender">Gender:</string>
    <string name="input_text_race">Race/Ethnicity:</string>
    <string name="new_gender_male_label">Male</string>
    <string name="new_gender_female_label">Female</string>
    <string name="new_gender_other_label">Other</string>
    <string name="ethnicity_hispanic_label">Hispanic/Latino</string>
    <string name="race_white_label">White</string>
    <string name="race_black_label">Black</string>
    <string name="race_asian_label">Asian</string>
    <string name="race_other_label">Other</string>
    <string name="input_text_height">Height:</string>
    <string name="input_text_weight">Weight:</string>
    <string name="input_button_save">Submit</string>

    <!-- Raw sensor data fragment -->
    <string name="raw_acc_header">Accelerometer</string>
    <string name="raw_acc_world_header">Accelerometer (world basis)</string>
    <string name="raw_gyro_header">Gyroscope</string>
    <string name="raw_rotation_header">Rotation Matrix</string>
    <string name="raw_rotation_vector_header">Rotation Vector</string>


    <!-- Subject info fragment -->
    <string name="subInfo_label_date">Date:</string>
    <string name="subInfo_label_subNum">Participant ID:</string>
    <string name="subInfo_label_first">First Name:</string>
    <string name="subInfo_label_last">Last Name:</string>
    <string name="subInfo_label_gender">Gender:</string>
    <string name="subInfo_label_delete_button">Delete</string>
    <string name="subInfo_message_recording">(Cannot delete while recording data)</string>

    <!-- Start fragment -->
    <string name="start_button_label_start">Start</string>
    <string name="start_button_label_stop">Stop</string>
    <string name="start_button_label_resume">Resume</string>
    <string name="start_recording_complete">Recording complete? Return device to administrator. Otherwise select resume. </string>
    <string name="start_recording">Begin walking.</string>
    <string name="start_recording_resume">Continue walking?</string>
    <string name="start_recording_progress">Recording in progress...</string>
    <string name="start_recording_ready">Ready to walk?</string>

    <!-- Save fragment -->
    <string name="save_button_text">Save</string>
    <string name="save_button_text_quit">Quit</string>
    <string name="save_instruction_text">Sensor data collected. Click to save the data and quit the current session:</string>
    <string name="save_no_data_text">No sensor data collected. Click to quit the current session:</string>
    <string name="save_message_recording">Cannot save or quit while recording data</string>

    <string name="device_sensors_label">Sensors:</string>
    <string name="device_sensors_explanation">(availability and hardware vendor)</string>

    <string name="device_accelerometer_label">Accelerometer:</string>
    <string name="device_gyroscope_label">Gyroscope:</string>
    <string name="device_gravity_label">Gravity:</string>
    <string name="device_magnetometer_label">Magnetometer:</string>
    <string name="walking_progress">walking_progress</string>
    <string name="participant">Participant</string>
    <string name="sensors">Sensors</string>
    <string name="id">ID</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="ft">ft</string>
    <string name="feet">\'</string>
    <string name="in">in</string>
    <string name="inches">\'\'</string>
    <string name="_0">0</string>
    <string name="lbs">lbs</string>

    <string name="directory">mHealth_v2</string>
    <string name="csv_participant">participants.csv</string>
    <string name="csv_sensors">walking.csv</string>
</resources>
