<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Participant">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_new"
                    android:icon="@drawable/ic_person_add_24dp"
                    android:title="@string/nav_new" />
                <item
                    android:id="@+id/nav_start"
                    android:icon="@android:drawable/ic_media_play"
                    android:title="@string/nav_start"/>
                <item
                    android:id="@+id/nav_save"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/nav_save" />
            </group>
        </menu>
    </item>

    <item android:title="Sensors">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_raw"
                    android:icon="@drawable/ic_info_outline_24dp"
                    android:title="@string/nav_raw" />
                <item
                    android:id="@+id/nav_accelerometer"
                    android:icon="@drawable/ic_timeline_grey_24dp"
                    android:title="@string/nav_accelerometer" />
                <item
                    android:id="@+id/nav_gyroscope"
                    android:icon="@drawable/ic_timeline_grey_24dp"
                    android:title="@string/nav_gyroscope" />
            </group>
        </menu>
    </item>

</menu>
